13-kubernetes-03/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 1024Mi
            cpu: "2"
          requests:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 1024Mi
            cpu: "2"
          requests:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - name: ngixn-port
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool-port
    protocol: TCP
    port: 9002
    targetPort: 8080
