13-kubernetes-03/nginx-https-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https-deployment
  labels:
    app: nginx-https
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https
  template:
    metadata:
      labels:
        app: nginx-https
    spec:
      containers:
      - name: nginx-https
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 1024Mi
            cpu: "2"
          requests:
            memory: 512Mi
            cpu: "1"
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html
        - name: config-nginx
          mountPath: /etc/nginx/conf.d
        - name: ssl-secret
          mountPath: /etc/nginx/ssl
        ports:
        - containerPort: 80
        - containerPort: 443
      volumes:
      - name: configmap-volume
        configMap:
          name: my-configmap
      - name: config-nginx
        configMap:
          name: config-nginx
      - name: ssl-secret
        secret:
          secretName: my-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-https
  ports:
  - name: http-port
    protocol: TCP
    targetPort: 80
    port: 80
  - name: https-port
    protocol: TCP
    targetPort: 443
    port: 443
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    name: myingress
spec:
  rules:
  - host: netology.filipp0vap.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              name: https-port
  tls:
    - hosts:
      - netology.filipp0vap.ru
      secretName: my-secret
